--- a/content/openbanking/caixa/ais.mdx
+++ b/content/openbanking/caixa/ais.mdx
@@ -22,25 +22,7 @@ import StepAccount from 'components/PSD/step-account';
 import AccountConsentStatus from 'components/PSD/step-account-consent-status';
 import StepTransactions from 'components/PSD/step-transactions';
 import DeleteAccountConsent from 'components/PSD/step-delete-account-consent';
-const requestOverride = {
-  "access": {
-    "accounts": [
-      {
-        "iban": "ES7520381001366000005858",
-      }
-    ],
-    "balances": [
-      {
-        "iban": "ES7520381001366000005858",
-      }
-    ],
-    "transactions": [
-      {
-        "iban": "ES7520381001366000005858",
-      }
-    ]
-  },
-};
+import caixaRequestOverride from './aisp-consent-override.json';
 
 
 
@@ -67,7 +49,7 @@ const requestOverride = {
 
   ## Create a consent
 
-  <StepCreateAccountConsent requestOverride={requestOverride} />
+  <StepCreateAccountConsent requestOverride={caixaRequestOverride} />
   </step>
   <step>
 
