--- a/content/openbanking/allianz-bg/ais.mdx
+++ b/content/openbanking/allianz-bg/ais.mdx
@@ -25,13 +25,7 @@ import StepTransactions from "components/PSD/step-transactions";
 import DeleteAccountConsent from "components/PSD/step-delete-account-consent";
 import AccountMockData from "components/PSD/account-mock-data";
 import allianzBGAISScenarios from "./aisScenarios.json";
-const requestOverride = {
-  access: {
-    accounts: [],
-    balances: [],
-    transactions: [],
-  },
-};
+import allianzBgAISPRequestOverride from './aisp-consent-override.json'
 
   <step>
 
@@ -43,7 +37,7 @@ const requestOverride = {
 
 ## Create a consent
 
-  <StepCreateAccountConsent requestOverride={requestOverride} />
+  <StepCreateAccountConsent requestOverride={allianzBgAISPRequestOverride} />
   </step>
   <step>
 
