--- a/content/openbanking/dskbank/ais.mdx
+++ b/content/openbanking/dskbank/ais.mdx
@@ -22,8 +22,7 @@ import AccountConsentStatus from "components/PSD/step-account-consent-status";
 import StepTransactions from "components/PSD/step-transactions";
 import DeleteAccountConsent from "components/PSD/step-delete-account-consent";
 import * as moment from "moment";
-const requestOverride = {
-};
+import dskbankAISPRequestOverride from './aisp-consent-override.json'
 const transactionsParamsOverride = {
 }
 
@@ -49,7 +48,7 @@ const transactionsParamsOverride = {
 
 ## Create a consent
 
-  <StepCreateAccountConsent requestOverride={requestOverride} />
+  <StepCreateAccountConsent requestOverride={dskbankAISPRequestOverride} />
   </step>
   <step>
 
