--- a/content/openbanking/piraeusbank/ais.mdx
+++ b/content/openbanking/piraeusbank/ais.mdx
@@ -25,28 +25,7 @@ import StepBalances from "components/PSD/step-balances";
 import AccountConsentStatus from "components/PSD/step-account-consent-status";
 import StepTransactions from "components/PSD/step-transactions";
 import DeleteAccountConsent from "components/PSD/step-delete-account-consent";
-const requestOverride = {
-  access: {
-    accounts: [
-      {
-        iban: "GR2801718220007022123123123"
-      }
-    ],
-    balances: [
-      {
-        iban: "GR2801718220007022123123123"
-      }
-    ],
-    transactions: [
-      {
-        iban: "GR2801718220007022123123123"
-      }
-    ],
-    // "accounts": [],
-    // "balances": [],
-    // "allPsd2": "allAccounts"
-  },
-};
+import piraeusbankAISPRequestOverride from './aisp-consent-override.json'
 
   <step>
 
@@ -70,7 +49,7 @@ const requestOverride = {
 
 ## Create a consent
 
-  <StepCreateAccountConsent requestOverride={requestOverride} />
+  <StepCreateAccountConsent requestOverride={piraeusbankAISPRequestOverride} />
   </step>
   <step>
 
