--- a/content/openbanking/postbank-bg/ais.mdx
+++ b/content/openbanking/postbank-bg/ais.mdx
@@ -21,8 +21,7 @@ import StepBalances from "components/PSD/step-balances";
 import AccountConsentStatus from "components/PSD/step-account-consent-status";
 import StepTransactions from "components/PSD/step-transactions";
 import DeleteAccountConsent from "components/PSD/step-delete-account-consent";
-const requestOverride = {
-};
+import postbankBgAISPRequestOverride from './aisp-consent-override.json'
 
   <step>
 
@@ -46,7 +45,7 @@ const requestOverride = {
 
 ## Create a consent
 
-  <StepCreateAccountConsent requestOverride={requestOverride} />
+  <StepCreateAccountConsent requestOverride={postbankBgAISPRequestOverride} />
   </step>
   <step>
 
