--- a/content/openbanking/raiffeisen-at/ais.mdx
+++ b/content/openbanking/raiffeisen-at/ais.mdx
@@ -20,16 +20,7 @@ import StepAccount from 'components/PSD/step-account';
 import StepTransactions from 'components/PSD/step-transactions';
 import AccountConsentStatus from 'components/PSD/step-account-consent-status';
 import StepBalances from 'components/PSD/step-balances';
-const requestOverride = {
-  "access": {
-    "balances": [
-      {
-        "iban": "AT099900000000001511"
-      }
-    ],
-    "transactions": []
-  },
-};
+import raiffeisenAtAISPRequestOverride from './aisp-consent-override.json'
 
 
 
@@ -43,7 +34,7 @@ const requestOverride = {
 
   ## Create a consent
 
-  <StepCreateAccountConsent requestOverride={requestOverride} />
+  <StepCreateAccountConsent requestOverride={raiffeisenAtAISPRequestOverride} />
   </step>
 <step>
 
