--- a/content/openbanking/ubb/ais.mdx
+++ b/content/openbanking/ubb/ais.mdx
@@ -26,16 +26,7 @@ import StepTransactions from 'components/PSD/step-transactions';
 import DeleteAccountConsent from 'components/PSD/step-delete-account-consent';
 import AccountMockData from 'components/PSD/account-mock-data';
 import ubbAISScenarios from './aisScenarios.json';
-const requestOverride = {
-access: {
-            accounts: [
-            ],
-            balances: [
-            ],
-            transactions: [
-            ]
-          },
-          };
+import ubbAISPRequestOverride from './aisp-consent-override.json'
 
 
 
@@ -49,7 +40,7 @@ access: {
 
   ## Create a consent
 
-  <StepCreateAccountConsent requestOverride={requestOverride} />
+  <StepCreateAccountConsent requestOverride={ubbAISPRequestOverride} />
   </step>
   <step>
 
