--- a/content/openbanking/zaba/ais.mdx
+++ b/content/openbanking/zaba/ais.mdx
@@ -25,31 +25,13 @@ import StepAccountConsentPostAuthorisation from "components/PSD/step-account-con
 import StepAccountConsentPutAuthorisation from "components/PSD/step-account-consent-put-authorisation";
 import StepBalances from "components/PSD/step-balances";
 import DeleteAccountConsent from "components/PSD/step-delete-account-consent";
-const requestOverride = {
-  access: {
-    accounts: [
-      {
-        iban: "HR0523600003200000210",
-      },
-    ],
-    balances: [
-      {
-        iban: "HR0523600003200000210",
-      },
-    ],
-    transactions: [
-      {
-        iban: "HR0523600003200000210",
-      },
-    ],
-  },
-};
+import zabaAISPRequestOverride from './aisp-consent-override.json'
 
   <step>
 
 ## Create a consent
 
-  <StepCreateAccountConsent requestOverride={requestOverride} />
+  <StepCreateAccountConsent requestOverride={zabaAISPRequestOverride} />
   </step>
 <step>
 
