--- a/content/openbanking/brd/pis.mdx
+++ b/content/openbanking/brd/pis.mdx
@@ -28,8 +28,7 @@ import StepPaymentStatus from 'components/PSD/step-payment-status';
 import StepPaymentPostAuthorisation from 'components/PSD/step-payment-post-authorisation';
 import PaymentMockData from 'components/PSD/payment-mock-data';
 import brdPISScenarios from './pisScenarios.json';
-const requestOverride = {
-};
+import brdPISPRequestOverride from './pisp-consent-override.json'
 
 
 
