--- a/content/openbanking/deutsche-bank/pis.mdx
+++ b/content/openbanking/deutsche-bank/pis.mdx
@@ -29,11 +29,7 @@ import StepPaymentStatus from 'components/PSD/step-payment-status';
 import StepPaymentAuthorisations from 'components/PSD/step-payment-authorisations';
 import StepPaymentAuthorisation from 'components/PSD/step-payment-authorisation';
 import StepPaymentPostAuthorisation from 'components/PSD/step-payment-post-authorisation';
-const requestOverride = {
-  debtorAccount: {
-    "iban": "DE17215730140403340300","currency":"EUR"
-  }
-};
+import deutscheBankPISPRequestOverride from './pisp-consent-override.json'
 
 
 
@@ -41,7 +37,7 @@ const requestOverride = {
 
   ## Create a consent
 
-  <StepInitiatePayment requestOverride={requestOverride} />
+  <StepInitiatePayment requestOverride={deutscheBankPISPRequestOverride} />
   </step>
 <step>
 
