--- a/content/openbanking/bankia/pis.mdx
+++ b/content/openbanking/bankia/pis.mdx
@@ -25,21 +25,7 @@ import StepInitiatePayment from 'components/PSD/step-initiate-payment';
 import SCAStep from 'components/PSD/step-sca';
 import StepPayment from 'components/PSD/step-payment';
 import StepPaymentStatus from 'components/PSD/step-payment-status';
-const requestOverride = {
-  creditorAddress: {
-    streetName: 'Fleet Street',
-    buildingNumber: '61A',
-    townName: 'London',
-    postCode: 'EC4Y1',
-    country: 'GB'
-  },
-  debtorAccount: {
-    "iban": "ES7520381001366000005858","currency":"EUR"
-  },
-  creditorAccount: {
-    "iban": "ES5720381001396035272034","currency":"EUR"
-  }
-};
+import bankiaPISPRequestOverride from './pisp-consent-override.json'
 
 
 
@@ -65,7 +51,7 @@ const requestOverride = {
 
   ## Create a consent
 
-  <StepInitiatePayment requestOverride={requestOverride} />
+  <StepInitiatePayment requestOverride={bankiaPISPRequestOverride} />
   </step>
   <step>
 
