--- a/content/openbanking/postbank-bg/pis.mdx
+++ b/content/openbanking/postbank-bg/pis.mdx
@@ -21,9 +21,7 @@ import StepAccount from "components/PSD/step-account";
 import StepInitiatePayment from "components/PSD/step-initiate-payment";
 import StepPayment from "components/PSD/step-payment";
 import StepPaymentStatus from "components/PSD/step-payment-status";
-const requestOverride = {
-  "debtorAccount":{"iban":"BG009BPBI000001"}
-};
+import postbankBgPISPRequestOverride from './pisp-consent-override.json'
 
   <step>
 
@@ -47,7 +45,7 @@ const requestOverride = {
 
 ## Create a consent
 
-  <StepInitiatePayment requestOverride={requestOverride} />
+  <StepInitiatePayment requestOverride={postbankBgPISPRequestOverride} />
   </step>
   <step>
 
